recursion.lessons.recursion.tree.Tree.scala.error
Tree:20: error: not found: value baisseCrrayon
	baisseCrrayon();
        ^